# domator

./: .dockerignore  .gitignore  .gitmodules  IMPLEMENTATION_SUMMARY.md  MESH_NETWORK_ISOLATION.md  README.md
.github/workflows/: turbapka-release.yml
czupel/: pyproject.toml
czupel/czupel/: auth.py  broker.py  main.py  state.py  websocket.py
czupel/heating/: platformio.ini
czupel/light_switch/: platformio.ini
czupel/lights_wifi/: platformio.ini
czupel/static/: blinds.html  heating.html  index.html  lights.html  relay_connection_manager.html  upload.html
czupel/wifi/: platformio.ini
docs/: home_assistant.md
higromaramu/: .gitignore  README.md  platformio.ini
higromaramu/src/: main.cpp
simulators/: README.md
simulators/blinds_uc/: README.md  main.py
turbacz/: Dockerfile  README-docker.md  README.md  docker-compose.yml  docker-entrypoint.sh  mosquitto.conf  pyproject.toml  run_docker_setup.sh  setup.sh  turbacz.toml.example
turbacz/Turbacz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
turbacz/blind-mover/: .gdbinit  .gitignore  Cargo.toml
turbacz/blind-mover/.cargo/: config
turbacz/blind-mover/c/blind-mover/src/: main.cpp
turbacz/blind-mover/src/: main.rs
turbacz/buttonLightMesh/: .gitignore  CMakeLists.txt  platformio.ini
turbacz/buttonLightMesh/components/mesh_lite/: CHANGELOG.md  CHANGELOG_CN.md  README.md  SUPPORT_POLICY.md  User_Guide.md  User_Guide_CN.md  idf_component.yml
turbacz/buttonLightMesh/components/mesh_lite/lib/: VERSION
turbacz/buttonLightMesh/components/mesh_lite/src/: esp_mesh_lite_wireless_debug.c
turbacz/buttonLightMesh/main/: idf_component.yml  main.c
turbacz/buttonLightMesh/src/: main.cpp
turbacz/docker/: mosquitto.conf
turbacz/heating/: platformio.ini
turbacz/heating/src/: main.cpp
turbacz/relay8wifi/: platformio.ini
turbacz/relay8wifi/src/: main.cpp  webpage.h
turbacz/relayLightMesh/: platformio.ini
turbacz/relayLightMesh/src/: main.cpp
turbacz/rootLightMesh/: platformio.ini
turbacz/rootLightMesh/src/: consts.h  main.cpp
turbacz/src/turbacz/: broker.py  config.py  main.py  websocket.py
turbacz/src/turbacz/data/: cookies_reset.py
turbacz/src/turbacz/data.old/: cookies_reset.py
turbacz/static/: blinds.html  heating.html  index.html  lights.html  login.html  rcm-cytoscape-test.html  rcm.html  upload.html
turbacz/static/data/: reset.py
turbacz/static/scripts/: blinds.js  common.js  heating.js  lights.js  login.js  rcm-cytoscape.js  rcm.js  sentry.js  upload.js
turbacz/static/styles/: blinds.css  common.css  heating.css  index.css  lights.css  login.css  rcm.css  sidebar.css  upload.css
turbacz/tests/: conftest.py  test_ha.py
turbacz/turbacz/: auth.py  broker.py  connection_manager.py  main.py  metrics.py  pyproject.toml  settings.py  state.py  state_manager.py  websocket.py
turbacz/turbacz/ha/: apply.py  db.py  discovery.py  models.py  router.py  topics.py
turbacz/turbacz/heating/: .gitignore
turbacz/turbacz/light_switch/src/: main.cpp
turbacz/turbacz/lights_wifi/src/: main.cpp
turbacz/turbacz/relay8wifi/: platformio.ini
turbacz/turbacz/relay8wifi/src/: main.cpp
turbacz/turbacz/src/Turbacz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
turbacz/turbacz/src/turbacz/: broker.py  main.py  websocket.py
turbacz/turbacz/src/turbacz/data/: cookies_reset.py
turbacz/turbacz/static/: lights.html
turbacz/turbacz/static/styles/: blinds.css  heating.css  lights.css
turbacz/wifi/: main.cpp  platformio.ini
turbacz/wifi/src/: main.cpp
turbacz/wifiLightButton/: platformio.ini
turbacz/wifiLightButton/src/: consts.h  main.cpp
turbacz/wifiLightButton/src/data/: index.html
turbaczApp/: .gitignore  README.md  pubspec.yaml
turbaczApp/lib/: blinds.dart  heating.dart  homepage.dart  main.dart
turbaczApp/test/: widget_test.dart
turbaczApp/web/: manifest.json
turbacz_app/: .gitignore  pubspec.yaml
turbacz_app/android/: settings.gradle
turbacz_app/lib/: auth_provider.dart  blinds.dart  heating.dart  homepage.dart  lights.dart  login.dart  login_page.dart  main.dart  settings.dart
turbacz_app/test/: widget_test.dart
turbapka/: README.md  pubspec.yaml
uc/: README.md
uc/buttonsMeshIDF/src/: CMakeLists.txt  Kconfig.projbuild  domator_mesh.c  domator_mesh.h  health_ota.c  idf_component.yml  mesh_comm.c  mesh_init.c  node_relay.c  node_root.c  node_switch.c  telnet.c
(+95 files in other folders)
