[project]
name = "Turbacz"
version = "0.2.0"
description = "IoT logic and user interface"
authors = [{ name = "DrDubel", email = "antek.suszko@gmail.com" }]
requires-python = "~=3.13.5"
dependencies = [
    "fastapi>=0.79.0",
    "fastapi-mqtt>=1.0.5,<2",
    "uvicorn<2.0.0",
    "Authlib>=1.1.0,<2",
    "itsdangerous>=2.1.2,<3",
    "httpx>=0.23.0",
    "aioconsole>=0.5.1",
    "aioprometheus>=22.5.0",
    "wsproto>=1.2.0,<2",
]

[tool.uv]
package = true

[project.scripts]
turbacz = "turbacz.main:start"

[dependency-groups]
dev = [
    "black>=22.6.0,<23",
    "isort>=5.10.1,<6",
]
