[project]
name = "Turbacz"
version = "0.2.0"
description = "IoT logic and user interface"
authors = [{ name = "DrDubel", email = "antek.suszko@gmail.com" }]
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi",
    "fastapi-mqtt",
    "uvicorn",
    "Authlib",
    "itsdangerous",
    "httpx",
    "aioconsole",
    "uvloop",
    "aioprometheus",
    "wsproto",
    "pydantic-settings>=2.12.0",
]

[project.scripts]
start = "turbacz.main:start"

[dependency-groups]
dev = [
    "black",
    "isort",
]

[tool.uv]
package = true
