[package]
name = "blind-mover"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m-semihosting = "^0.3.3"
embedded-hal = "^0.2.3"
nb = "^0.1.2"
cortex-m = "^0.6.2"
cortex-m-rt = "^0.6.11"
panic-halt = "^0.2.0"
stm32f1 = "^0.11.0"
embedded-dma = "^0.1.2"
numtoa = "^0.2.4"

[dependencies.stm32f1xx-hal]
version = "^0.6.1"
features = ["rt", "stm32f103", "medium"]

[features]
device-selected = ["stm32f103"]
doc = []
rt = ["stm32f1/rt"]
stm32f100 = ["stm32f1/stm32f100", "device-selected"]
stm32f101 = ["stm32f1/stm32f101", "device-selected"]
stm32f103 = ["stm32f1/stm32f103", "device-selected"]
