idf_component_register(
    SRCS
        "domator_mesh.c"
        "mesh_init.c"
        "node_switch.c"
        "mesh_comm.c"
        "node_root.c"
        "node_relay.c"
        "health_ota.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_wifi
        nvs_flash
        esp_netif
        esp_event
        esp_timer
        led_strip
        mqtt
        driver
        json
)